# vector-db

./: .env  .gitignore  CLAUDE.md  Dockerfile  PHASE7_PLAN.md  RAG_BACKEND_V2_SPECS.md  README.md  assistant.md  bench.py  client_example.py  codes.txt  db.py  docker-compose.yml  docs.json  indexer.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  schemas.py  test.py  vectors.db
.github/workflows/: deploy-docs.yml  publish-npm.yml  publish-python.yml
ai_context/: AI_RULES.md  call_flows.md  file_roles.md  hot_paths.md  system_graph.md
docs/: docs.json  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: authentication.mdx  (+2 more)
migrations/: env.py
scripts/: seed_admin_users.py
sdk/python/: README.md  pyproject.toml
sdk/python/vectordb_client/: __init__.py  _async_resources.py  _http.py  _resources.py  async_client.py  client.py  exceptions.py  models.py
sdk/python/vectordb_client/cli/: __init__.py  _output.py  main.py
tests/: conftest.py  test_admin.py  test_api_keys.py  test_ask.py  test_batch_delete.py  test_benchmark.py  test_collections.py  test_core_api.py  test_embedding_unification.py  test_graph_llm_provider.py  test_graphrag.py  test_hybrid_graph_ask.py  test_hybrid_search.py  test_multi_tenancy.py  test_new_features.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6_cli.py  test_phase6_python_sdk.py  test_rag.py  test_rerank.py  test_search.py  test_timing.py  test_usage_tracking.py  test_vectors.py
vectordb/: app.py  auth.py  cache.py  cleanup.py  collection_cache.py  config.py  logging_config.py  metrics.py  middleware.py  quota.py  tracing.py
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+129 files in other folders)
