[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectordb-client"
version = "0.1.0"
description = "Python SDK for the VectorDB REST API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "httpx>=0.25",
    "click>=8.1",
]

[project.scripts]
vdb = "vectordb_client.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "responses>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
